@@ -118,3 +118,20 @@ try(test_that("Test that random samples (simulate) have correct covariance: ",
               expect_equal(cov(simul_samps), true_cov, 
                                                 tol = 0.1,
                           info = "Difference in covs exceeds tolerance")))
+
+
+## dmulti
+
+set.seed(0)
+normGen <- rmulti(1, 1000, prob = c(.1, .1, .8))
+set.seed(0)
+unnormGen <- rmulti(1, 1000, prob = c(10, 10, 80))
+normResult <- dmulti(normGen, prob = c(.1, .1, .8), log = TRUE)
+unnormResult <- dmulti(normGen, prob = c(10, 10, 80), log = TRUE)
+
+try(test_that("rmulti handles 'probs' that do not sum to one: ",
+              expect_identical(normGen, unnormGen,
+                          info = "normalized and unnormalized probabilities give different results")))
+try(test_that("dmulti handles 'probs' that do not sum to one: ",
+              expect_equal(normResult, unnormResult,
+                          info = "normalized and unnormalized probabilities give different results")))
