@@ -1,3 +1,9 @@
+                           CHANGES IN VERSION 0.6-2 (November 2016)
+
+USER LEVEL CHANGES
+
+-- dmulti() and rmulti() now allow 'probs' argument with arbitrary non-negative values and internally normalize these so they sum to one, to be consistent with R's multinom behavior.
+
                            CHANGES IN VERSION 0.6-1 (October 2016)
 
 DEVELOPER LEVEL CHANGES
